--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     font-family: sans-serif;
     font-weight: 300;
-    background: #222;
+    background: white;
 }
 
 nav {
