--- a/style.css
+++ b/style.css
@@ -36,3 +36,18 @@ nav {
 .main-page {
     margin: 3rem;
 }
+
+.element-header {
+    text-align:center;
+}
+
+canvas {
+    position: absolute;
+    left: 50%;
+    top: 65%;
+    transform: translate(-50%, -50%);
+    width: 50%;
+    height: 50%;
+    padding: 20px;
+    text-align: center;
+}
