--- a/style.css
+++ b/style.css
@@ -44,19 +44,20 @@ nav {
 
 .main-page {
     margin: 3rem;
+    display: flex;
 }
 
 .element-header {
     text-align:center;
 }
 
-canvas {
+#canvas-holder {
     position: absolute;
     left: 50%;
     top: 65%;
     transform: translate(-50%, -50%);
-    width: 50%;
-    height: 50%;
+    width: 100%;
+    height: 15em;
     padding: 20px;
     text-align: center;
 }
@@ -80,4 +81,33 @@ a {
 .topics-header{
     text-align: center;
     font-size: 3em;
+}
+
+footer {
+    margin-bottom: 0;
+    padding: 1.5rem;
+    color: white;
+}
+
+footer p {
+    opacity: .5;
+    display: inline-block;
+    margin-left: 1em;
+    margin-right: 1em;
+}
+
+footer p:hover {
+    opacity: .7;
+    color: white;
+    transition-duration: 100ms;
+}
+
+footer p:first-child {
+    margin-left: 3em;
+}
+
+hr {
+    border: .4px solid grey;
+    width: 85%;
+    opacity: 50%;
 }
