--- a/style.css
+++ b/style.css
@@ -118,6 +118,7 @@ hr {
 
 /* Create the caret/arrow with a unicode, and style it */
 .caret::before {
+  font-size: 18pt;
   content: "\25B6";
   color: rgb(255, 255, 255);
   display: inline-block;
